k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: capital-market
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.capital-market.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-svc
                port:
                  number: 80
